[tool.poetry]
name = "axi0m"
version = "0.1.0"
description = "Package for README repo on GitHub for username axi0m"
authors = ["axi0m <axi0m@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
